metadata-sfdx/force-app/main/default/objects/TackSurvey__c/TackSurvey__c.object-meta.xml
<CustomObject>
    <description>This is a custom object that will be used to contain all data being gathered from a survey that is outside of Tack</description>
    <label>Tack Survey</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tack Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>