metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentActedasBusinessParter__c.field-meta.xml
<CustomField>
    <fullName>AgentActedasBusinessParter__c</fullName>
    <description>[Agent Name] acted as a partner in my business.</description>
    <inlineHelpText>[Agent Name] acted as a partner in my business.</inlineHelpText>
    <label>Agent Acted as Business Parter</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>