metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentConfidence__c.field-meta.xml
<CustomField>
    <fullName>AgentConfidence__c</fullName>
    <description>[Agent Name] gave me confidence in the solution provided.</description>
    <inlineHelpText>[Agent Name] gave me confidence in the solution provided.</inlineHelpText>
    <label>Agent Confidence</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>