metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentEmpoweredMe__c.field-meta.xml
<CustomField>
    <fullName>AgentEmpoweredMe__c</fullName>
    <description>[Agent Name] empowered me to resolve my question or issue.</description>
    <inlineHelpText>[Agent Name] empowered me to resolve my question or issue.</inlineHelpText>
    <label>Agent Empowered Me</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>