metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentEmpoweredMeComment__c.field-meta.xml
<CustomField>
    <fullName>AgentEmpoweredMeComment__c</fullName>
    <description>[Agent Name] empowered me to resolve my question or issue, comments.</description>
    <inlineHelpText>[Agent Name] empowered me to resolve my question or issue, comments.</inlineHelpText>
    <label>Agent Empowered Me Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>