metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentEnthusiastictoAssist__c.field-meta.xml
<CustomField>
    <fullName>AgentEnthusiastictoAssist__c</fullName>
    <description>[Agent name] was enthusiastic about assisting me</description>
    <inlineHelpText>[Agent name] was enthusiastic about assisting me</inlineHelpText>
    <label>Agent Enthusiastic to Assist</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>