metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentHelpedFeelSuccessful__c.field-meta.xml
<CustomField>
    <fullName>AgentHelpedFeelSuccessful__c</fullName>
    <description>[Agent Name] helped me feel I can be successful on Thumbtack.</description>
    <inlineHelpText>[Agent Name] helped me feel I can be successful on Thumbtack.</inlineHelpText>
    <label>Agent Helped Feel Successful</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>