metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentInspiredMe__c.field-meta.xml
<CustomField>
    <fullName>AgentInspiredMe__c</fullName>
    <description>[Agent Name] explained Thumbtack in a way that inspired me.</description>
    <inlineHelpText>[Agent Name] explained Thumbtack in a way that inspired me.</inlineHelpText>
    <label>Agent Inspired Me</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>