metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentInspiredMeComment__c.field-meta.xml
<CustomField>
    <fullName>AgentInspiredMeComment__c</fullName>
    <description>[Agent Name] explained Thumbtack in a way that inspired me, comments.</description>
    <inlineHelpText>[Agent Name] explained Thumbtack in a way that inspired me, comments.</inlineHelpText>
    <label>Agent Inspired Me Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>