metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentRecommendations__c.field-meta.xml
<CustomField>
    <fullName>AgentRecommendations__c</fullName>
    <description>[Agent Name] made recommendations for how I could be more successful on Thumbtack.</description>
    <inlineHelpText>[Agent Name] made recommendations for how I could be more successful on Thumbtack.</inlineHelpText>
    <label>Agent Recommendations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>