metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentRecommendationsComment__c.field-meta.xml
<CustomField>
    <fullName>AgentRecommendationsComment__c</fullName>
    <description>[Agent Name] made recommendations for how I could be more successful on Thumbtack, comments.</description>
    <inlineHelpText>[Agent Name] made recommendations for how I could be more successful on Thumbtack, comments.</inlineHelpText>
    <label>Agent Recommendations Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>