metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/AgentUnderstoodBusinessNeeds__c.field-meta.xml
<CustomField>
    <fullName>AgentUnderstoodBusinessNeeds__c</fullName>
    <description>[Agent Name] understood the needs of my business.</description>
    <inlineHelpText>[Agent Name] understood the needs of my business.</inlineHelpText>
    <label>Agent Understood Business Needs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>