metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case from which the Survey was sent out</description>
    <inlineHelpText>This is the case from which the survey was sent.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tack Surveys</relationshipLabel>
    <relationshipName>Tack_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>