metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <description>Field to display the case category at the time of Survey Response record creation.</description>
    <label>Case Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>