metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseClosedDateStamp__c.field-meta.xml
<CustomField>
    <fullName>CaseClosedDateStamp__c</fullName>
    <description>Field to store the text-formatted date stamp of when the case was originally closed. Populated via workflow formula.</description>
    <label>Case Closed Date Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>