metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseClosedTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>CaseClosedTimeStamp__c</fullName>
    <description>Field to store the text-formatted time stamp of when the case was originally closed. Populated via workflow formula.</description>
    <label>Case Closed Time Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>