metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseHelpCenterTopic__c.field-meta.xml
<CustomField>
    <fullName>CaseHelpCenterTopic__c</fullName>
    <description>Formula field to reference the Case.HelpCenterVisitTopic__c field; used in reporting and list views.</description>
    <formula>Case__r.HelpCenterVisitTopic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Help Center Topic</label>
    <type>Text</type>
</CustomField>