metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseOpenDateStamp__c.field-meta.xml
<CustomField>
    <fullName>CaseOpenDateStamp__c</fullName>
    <description>Text area populated via workflow to stamp the date of the case created date in text format; used for email templates.</description>
    <label>Case Open Date Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>