metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseOpenTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>CaseOpenTimeStamp__c</fullName>
    <description>Text area populated via workflow to stamp the time of the case created date in text format; used for email templates.</description>
    <label>Case Open Time Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>