metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>CaseOrigin__c</fullName>
    <description>Formula field to display the Origin (Email, Web, Phone, Outbound) of the case. Used in list views and reports.</description>
    <formula>TEXT(Case__r.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>