metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseRefTag__c.field-meta.xml
<CustomField>
    <fullName>CaseRefTag__c</fullName>
    <description>Formula field to bring over the Case Ref tag. Used in email templates for survey offers.</description>
    <formula>Case__r.CaseRef__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Ref Tag</label>
    <type>Text</type>
</CustomField>