metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CaseSubcategory__c.field-meta.xml
<CustomField>
    <fullName>CaseSubcategory__c</fullName>
    <description>Field to display the case subcategory at the time of Survey Response creation.</description>
    <label>Case Subcategory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>