metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>