metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CoachingComments__c.field-meta.xml
<CustomField>
    <fullName>CoachingComments__c</fullName>
    <description>Add any additional feedback about survey.</description>
    <label>Coaching Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>