metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CoachingStatus__c.field-meta.xml
<CustomField>
    <fullName>CoachingStatus__c</fullName>
    <description>This displays the coaching status for the survey.</description>
    <label>Coaching Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>