metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CommunicatedClearly__c.field-meta.xml
<CustomField>
    <fullName>CommunicatedClearly__c</fullName>
    <description>The agent communicated clearly.</description>
    <inlineHelpText>The agent communicated clearly.</inlineHelpText>
    <label>Communicated Clearly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neither agree nor disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>