metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact who submitted the survey response</description>
    <inlineHelpText>The contact who submitted the survey response</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tack Surveys</relationshipLabel>
    <relationshipName>TackSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>