metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Formula field to bring over the contact's email address; used as a merge field in URL parameter to survey tool.</description>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>