metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName__c</fullName>
    <description>Formula field that brings over the associated contact's first name. Used in email templates sent from the Survey Response object.</description>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>