metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CreatedDateMinusOne__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateMinusOne__c</fullName>
    <description>Used in specific CSAT reports that use the THIS WEEK or LAST WEEK date range based on the Created date, to automatically match Thumbtack's work week, allowing for automation of weekly reports and dashboards.</description>
    <formula>CreatedDate - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Minus One)</label>
    <type>DateTime</type>
</CustomField>