metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <description>The time that the CSAT record was created; used for list views and reporting.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>