metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/DisputeComments__c.field-meta.xml
<CustomField>
    <fullName>DisputeComments__c</fullName>
    <description>The reason, in text, the agent feels the Tack Survey should be modified.</description>
    <inlineHelpText>Please provide a detailed description and valid reason why you feel this Survey should be changed.</inlineHelpText>
    <label>Dispute Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>