metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/DisputeReason__c.field-meta.xml
<CustomField>
    <fullName>DisputeReason__c</fullName>
    <description>The reason the agent feels the Survey should be modified.</description>
    <label>Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deleted or blacklisted pro/customer</fullName>
            </value>
            <value>
                <fullName>Duplicate survey</fullName>
            </value>
            <value>
                <fullName>Meant for another specialist</fullName>
            </value>
            <value>
                <fullName>Positive agent, but negative product comment</fullName>
            </value>
            <value>
                <fullName>MC escalation</fullName>
            </value>
            <value>
                <fullName>Foreign language speaker</fullName>
            </value>
            <value>
                <fullName>Could not connect but followed process</fullName>
            </value>
            <value>
                <fullName>Bad Response (1 or 2 ) but positive comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>