metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/DisputeSysAdminChangesMade__c.field-meta.xml
<CustomField>
    <fullName>DisputeSysAdminChangesMade__c</fullName>
    <label>Dispute Sys Admin Changes Made</label>
    <type>TextArea</type>
</CustomField>