metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/EasetoHandleIssue__c.field-meta.xml
<CustomField>
    <fullName>EasetoHandleIssue__c</fullName>
    <label>Ease to Handle Issue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>