metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Effortpersonallyputforthbyprocust__c.field-meta.xml
<CustomField>
    <fullName>Effortpersonallyputforthbyprocust__c</fullName>
    <label>Effort personally put forth by pro/cust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very high effort</fullName>
            </value>
            <value>
                <fullName>High effort</fullName>
            </value>
            <value>
                <fullName>Medium effort</fullName>
            </value>
            <value>
                <fullName>Low effort</fullName>
            </value>
            <value>
                <fullName>Very low effort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>