metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Tack Surveys</relationshipLabel>
    <relationshipName>TackSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>