metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/FollowThroughonPromises__c.field-meta.xml
<CustomField>
    <fullName>FollowThroughonPromises__c</fullName>
    <description>Field to store the response to the MI CSat survey question: They followed through on promises made.</description>
    <inlineHelpText>They followed through on promises made.</inlineHelpText>
    <label>Follow Through on Promises</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>