metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/HelpCenterSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>HelpCenterSatisfaction__c</fullName>
    <label>Help Center Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neither satisfied nor dissatisfied</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>