metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingAgentClarity__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingAgentClarity__c</fullName>
    <description>They set proper expectations and were clear about next steps</description>
    <label>IM Onboarding Agent Clarity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>