metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingAgentCommunication__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingAgentCommunication__c</fullName>
    <label>IM Onboarding Agent Communication</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>