metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingAgentFollowthrough__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingAgentFollowthrough__c</fullName>
    <label>IM Onboarding Agent Followthrough</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>