metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingAgentKnowledge__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingAgentKnowledge__c</fullName>
    <inlineHelpText>They were knowledgeable about Thumbtack Instant Match</inlineHelpText>
    <label>IM Onboarding Agent Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>