metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingAgentTime__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingAgentTime__c</fullName>
    <inlineHelpText>They took the time to understand my business</inlineHelpText>
    <label>IM Onboarding Agent Time</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>