metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingEase__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingEase__c</fullName>
    <inlineHelpText>It took a reasonable amount of time to get set up on Thumbtack Instant Match</inlineHelpText>
    <label>IM Onboarding Ease</label>
    <length>100</length>
    <type>Text</type>
</CustomField>