metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingProgramConfidence__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingProgramConfidence__c</fullName>
    <inlineHelpText>I feel confident Thumbtack will be able to quote on my behalf with the information I provided during setup</inlineHelpText>
    <label>IM Onboarding Program Confidence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>