metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingQuoteSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingQuoteSatisfaction__c</fullName>
    <inlineHelpText>Are you satisfied with the quality of the quotes we sent on your behalf?</inlineHelpText>
    <label>IM Onboarding Quote Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>