metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingReachability__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingReachability__c</fullName>
    <inlineHelpText>I could reach Thumbtack when I had questions or problems with my setup</inlineHelpText>
    <label>IM Onboarding Reachability</label>
    <length>100</length>
    <type>Text</type>
</CustomField>