metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMOnboardingSetupSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>IMOnboardingSetupSatisfaction__c</fullName>
    <inlineHelpText>How satisfied are you with the Instant Match setup experience overall?</inlineHelpText>
    <label>IM Onboarding Setup Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neither satisfied nor dissatisfied</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>