metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IMQuotingIssues__c.field-meta.xml
<CustomField>
    <fullName>IMQuotingIssues__c</fullName>
    <label>IM Quoting Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quoting price</fullName>
            </value>
            <value>
                <fullName>Quote message is wrong</fullName>
            </value>
            <value>
                <fullName>Thumbtack quoted on a project that isn't a fit for you business</fullName>
            </value>
            <value>
                <fullName>Thumbtack quoted on a project that is not aligned with your travel preferences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>