metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/InstantMatchSignupSource__c.field-meta.xml
<CustomField>
    <fullName>InstantMatchSignupSource__c</fullName>
    <description>How did you first learn about Thumbtack Instant Match?</description>
    <label>Instant Match Signup Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>An email from Thumbtack</fullName>
            </value>
            <value>
                <fullName>A notification in the Thumbtack app or online</fullName>
            </value>
            <value>
                <fullName>A phone call from Thumbtack</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>