metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IsMyTeam__c.field-meta.xml
<CustomField>
    <fullName>IsMyTeam__c</fullName>
    <description>Formula field to indicate true if the Logged in User's Team matches the Team stamped on the CSAT. Used for dynamic list views, reports, and dashboards.</description>
    <formula>IF(ISBLANK(Team__c), False, 
IF(AND(ISBLANK(TEXT($User.SpoofAsTeam__c)),TEXT($User.Team__c) = Team__c), True, 
IF(TEXT($User.SpoofAsTeam__c) = Team__c, True, 
False)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Team</label>
    <type>Checkbox</type>
</CustomField>