metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/IssueResolved__c.field-meta.xml
<CustomField>
    <fullName>IssueResolved__c</fullName>
    <description>Was the question or issue you contacted Thumbtack about resolved?</description>
    <inlineHelpText>Was the question or issue you contacted Thumbtack about resolved?</inlineHelpText>
    <label>Issue Resolved</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>