metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/KBArticleId__c.field-meta.xml
<CustomField>
    <fullName>KBArticleId__c</fullName>
    <description>The ID of the article that prompted the survey response.</description>
    <label>KB Article ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>