metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/KBArticleImprovementReason__c.field-meta.xml
<CustomField>
    <fullName>KBArticleImprovementReason__c</fullName>
    <description>The reason indicated by the public site visitor for article helpfulness.</description>
    <inlineHelpText>The reason indicated by the public site visitor for article helpfulness.</inlineHelpText>
    <label>KB Article Improvement Reason</label>
    <type>TextArea</type>
</CustomField>