metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/KBArticleTitle__c.field-meta.xml
<CustomField>
    <fullName>KBArticleTitle__c</fullName>
    <label>KB Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>