metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/KBArticleVersionId__c.field-meta.xml
<CustomField>
    <fullName>KBArticleVersionId__c</fullName>
    <description>The ID of the Knowledge Article Version (KAV) for the article that prompted the survey response.</description>
    <inlineHelpText>The ID of the Knowledge Article Version (KAV) for the article that prompted the survey response.</inlineHelpText>
    <label>KB Article Version Id</label>
    <type>TextArea</type>
</CustomField>