metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/KnowledgeofPoliciesandProcedures__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeofPoliciesandProcedures__c</fullName>
    <description>Field to store the response to the MI Tack Survey question: They were knowledgeable about Thumbtack policies and procedures.</description>
    <inlineHelpText>They were knowledgeable about Thumbtack policies and procedures.</inlineHelpText>
    <label>Knowledge of Policies and Procedures</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>