metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tack Surveys</relationshipLabel>
    <relationshipName>TackSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>