metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/LikelihoodToUseTTAgain__c.field-meta.xml
<CustomField>
    <fullName>LikelihoodToUseTTAgain__c</fullName>
    <description>Based on the overall experience with your most recent interaction with support, are you more or less likely to continue using Thumbtack?</description>
    <inlineHelpText>Based on the overall experience with your most recent interaction with support, are you more or less likely to continue using Thumbtack?</inlineHelpText>
    <label>Likelihood to Continue to use TT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Neither likely nor unlikely</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>