metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/LikelihoodToUseTTAgainComment__c.field-meta.xml
<CustomField>
    <fullName>LikelihoodToUseTTAgainComment__c</fullName>
    <description>Please explain the main reason for your rating.</description>
    <inlineHelpText>Please explain the main reason for your rating.</inlineHelpText>
    <label>Likelihood to Continue to use TT Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>