metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/LoggedinUser__c.field-meta.xml
<CustomField>
    <fullName>LoggedinUser__c</fullName>
    <description>Formula field to mark the checkbox true if the logged in user matches the User associated with the Survey Response.</description>
    <formula>IF(User__r.Id = $User.Id , True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User</label>
    <type>Checkbox</type>
</CustomField>