metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ManagerDisputeComments__c.field-meta.xml
<CustomField>
    <fullName>ManagerDisputeComments__c</fullName>
    <label>Manager Dispute Comments</label>
    <type>TextArea</type>
</CustomField>