metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ManagerDisputeDecision__c.field-meta.xml
<CustomField>
    <fullName>ManagerDisputeDecision__c</fullName>
    <label>Manager Dispute Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>