metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ManualOverride__c.field-meta.xml
<CustomField>
    <fullName>ManualOverride__c</fullName>
    <description>Custom picklist field to trigger manual override workflow actions.</description>
    <label>Manual Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Survey Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>